--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Vansh Shah</p>
-
+    <button>Main Button</button>
     <p>This is feature1 branch modifications</p>
 </body>
 </html>
